leptos_macro/tests/view/46_slot_missing_required_prop.stderr
error[E0277]: missing required prop `concrete_i32` on slot `HelloSlot`
  --> tests/view/46_slot_missing_required_prop.rs:24:13
   |
24 | /             <HelloSlot slot>
25 | |                 "Hello, World!"
26 | |             </HelloSlot>
   | |________________________^ missing prop `concrete_i32`
   |
   = help: the trait `__required_HelloSlot_concrete_i32` is not implemented for `leptos::prelude::__Absent`
   = note: required props: [`concrete_i32`]
note: required by a bound in `__HelloSlot::__PresenceBuilder::<(__F0, __F1)>::__require_props`
  --> tests/view/46_slot_missing_required_prop.rs:6:1
   |
 6 | #[slot]
   | ^^^^^^^ required by this bound in `__PresenceBuilder::<(__F0, __F1)>::__require_props`
   = note: this error originates in the attribute macro `slot` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `__check_missing` exists for struct `__HelloSlot::__PresenceBuilder<(leptos::prelude::__Absent, leptos::prelude::__Present)>`, but its trait bounds were not satisfied
  --> tests/view/46_slot_missing_required_prop.rs:24:13
   |
 6 |   #[slot]
   |   ------- method `__check_missing` not found for this struct
...
24 |               <HelloSlot slot>
   |  _____________^
25 | |                 "Hello, World!"
26 | |             </HelloSlot>
   | |________________________^
   |
  ::: $WORKSPACE/leptos/src/component.rs
   |
   |   pub struct __Absent;
   |   ------------------- doesn't satisfy `_: __required_HelloSlot_concrete_i32`
   |
note: trait bound `leptos::prelude::__Absent: __required_HelloSlot_concrete_i32` was not satisfied
  --> tests/view/46_slot_missing_required_prop.rs:6:1
   |
 6 | #[slot]
   | ^^^^^^^
   = note: this error originates in the attribute macro `slot` (in Nightly builds, run with -Z macro-backtrace for more info)
